fixes type for Programming Outreach table header on small screens

--- a/themes/bootstrapndlc/css-compiled/theme.css
+++ b/themes/bootstrapndlc/css-compiled/theme.css
@@ -962,7 +962,7 @@ and also iPads specifically.
     content: "Session Track - Collections and Access";
     color: #fff; }
 
-  body.programming-outreach-and-advocacy .col-md-9 th:before {
+  body.programming-outreach-advocacy .col-md-9 th:before {
     content: "Session Track - Programming, Outreach, and Advocacy";
     color: #fff; }
 
