--- a/themes/bootstrapndlc/scss/theme/_custom.scss
+++ b/themes/bootstrapndlc/scss/theme/_custom.scss
@@ -761,7 +761,7 @@ only screen and (max-width: 760px),
     content: "Session Track - Collections and Access";
     color: #fff;
   }
-  body.programming-outreach-and-advocacy .col-md-9 th:before {
+  body.programming-outreach-advocacy .col-md-9 th:before {
     content: "Session Track - Programming, Outreach, and Advocacy";
     color: #fff;
   }
